...
    <string name="enter_first_name_here">"     Tommy"</string>
    <string name="enter_last_name_here">"     Trojan"</string>
    <string name="enter_biography_here">"     Tell Us About Yourself"</string>
    <string name="enter_phone_number_here">"     1234567890"</string>
    <string name="sign_in">Sign In</string>
    <string name="required_field">* required field</string>
    <string name="home"><b>Home</b></string>
    <string name="following">Following:</string>
    <string name="explore">Explore:</string>
    <string name="academic">Academic</string>
    <string name="life">Life</string>
    <string name="event">Event</string>
    <string name="bell">bell</string>
...
